fix UI image error on iOS

--- a/src/App.scss
+++ b/src/App.scss
@@ -11,6 +11,7 @@
     }
     &__navbar {
         flex: 20%;
+        -webkit-flex: 30%;
         background-color: #191d2b;
         height: 100vh;
         color: #8a91a7;
